# DEEPaaS

./: .gitignore  .readthedocs.yml  .stestr.conf  .testr.conf  AUTHORS  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ChangeLog  Dockerfile  Dockerfile.CI  Jenkinsfile  Makefile  README.md  pyproject.toml  readthedocs.yaml  release-please-config.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  python-publish.yml  release-please.yml
.sqa/: config.yml  docker-compose.yml
deepaas/: __init__.py  auth.py  config.py  exceptions.py  loading.py  log.py  model.py  opts.py  version.py
deepaas/aiohttp_apispec/: README.md
deepaas/api/: __init__.py  v1.py  versions.py
deepaas/api/v2/: __init__.py  debug.py  models.py  predict.py  responses.py  train.py  utils.py
deepaas/cmd/: _shutdown.py  cli.py  deepaas_test_v2_v3.py  execute.py  run.py  wsk.py
deepaas/model/: __init__.py  loading.py  v1.py  v2.py
deepaas/model/v2/: __init__.py  base.py  executor.py  test.py  wrapper.py
deepaas/openwhisk/: handle.py  proxy.py
deepaas/openwisk/: handle.py  proxy.py
deepaas/tests/: base.py  fake_responses.py  fake_v2_model.py  test_api.py  test_auth.py  test_cli_fix.py  test_cmd.py  test_e2e_auth.py  test_models.py  test_openwhisk.py  test_v1_api.py  test_v1_models.py  test_v2_api.py  test_v2_models.py  test_versions_api.py
deepaas/tests/out_test/: out_xxxxxxxxxx.json
doc/: bearer-auth.md  requirements.txt
doc/source/: api.rst  conf.py  devel.rst  index.rst  installation.rst  openwhisk.rst  quickstart.rst  upgrade.rst
doc/source/_static/: deepaas.conf.sample
doc/source/_templates/: sidebarfooter.html
doc/source/cli/: deepaas-cli.rst  deepaas-execute.rst  deepaas-predict.rst  deepaas-run.rst  deepaas-wsk.rst  index.rst
doc/source/configuration/: config.rst  index.rst  sample.rst
doc/source/contributing/: index.rst
doc/source/install/: index.rst  installation.rst  upgrade.rst
doc/source/install/configuration/: config.rst  index.rst  sample.rst
doc/source/install/releasenotes/: index.rst
doc/source/releasenotes/: index.rst
doc/source/user/: authentication.rst  execute.rst  index.rst  predict.rst  v1-api.rst  v2-api.rst
docker/: Dockerfile
etc/: deepaas-config-generator.conf
paper/: paper.bib  paper.md
releasenotes/notes/: add-debug-endpoint-7b2f3ede199d74cc.yaml  add-new-cli-669061dfada81f5c.yaml  allow-passing-args-dbadafef832265e9.yaml  bug-fixes-73cfa32ffb5bdbb0.yaml  deepaas-cli-6e8a8689baab3277.yaml  deprecate-deepaas-predict-f92939d443cb1904.yaml  deprecate-old-model-loading-27aa4485b2132da7.yaml  deprecate-openwhisk-be449ddfb9fa554c.yaml  deprecation-removals-1f43c9301633ac76.yaml  disable-v1-default-dc827ebdd0d90181.yaml  initial-documentation-2584128b20eeb9d1.yaml  only-py3-support-928e43ebad4904da.yaml  openwish-proxy-c9c15eef91da0579.yaml  remove-deprecated-get-args-166d8535f5b23c1e.yaml  remove-openwhisk-integration-f69978c2824221c3.yaml  remove-v1-api-93dbfcdc2f4beb1d.yaml  training-arguments-4e59dc2945a634a5.yaml  unify-train-predict-261e92c21d9f47d1.yaml  v2-api-1bc54fcdb42f6c8b.yaml  versioned-api-endpoints-23bf76653d43f033.yaml
