[tool.poetry]
name = "deepaas"
version = "2.5.1"
description = "DEEPaaS is a REST API to expose a machine learning model."
authors = ["Alvaro Lopez Garcia <aloga@ifca.unican.es>"]
license = "Apache-2"
readme = "README.md"

homepage = "https://github.com/ai4os/deepaas"
repository = "https://github.com/ai4os/deepaas/issues"
documentation = "https://deepaas.readthedocs.io/"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ai4os/deepaas/issues"

[tool.poetry.scripts]
deepaas-run = "deepaas.cmd.run:main"
deepaas-predict = "deepaas.cmd.execute:main"
deepaas-cli = "deepaas.cmd.cli:main"

[tool.poetry.plugins] # Optional super table 

[tool.poetry.plugins."oslo.config.opts"] 
deepaas = "deepaas.opts:list_opts"

[tool.poetry.dependencies]
python = "^3.10"
"oslo.log" = "^6.0.0"
"oslo.config" = "^9.4.0"
stevedore = "^5.2.0"
aiohttp = "^3.9.5"
aiohttp-apispec = "^2.2.3"
Werkzeug = "^3.0.3"
marshmallow = "^3.21.3"
webargs = "<6.0.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.15.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-aiohttp = "^1.0.5"
pytest-cov = "^5.0.0"
fixtures = "^4.1.0"
reno = "^4.1.0"
mock = "^5.1.0"
testtools = "^2.7.1"
setuptools = "^70.0.0"


[tool.poetry.group.test-flake8.dependencies]
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.26"
flake8-typing-imports = "^1.15.0"
flake8-colors = "^0.1.9"
pep8-naming = "^0.14.1"
pydocstyle = "^6.3.0"


[tool.poetry.group.test-black.dependencies]
black = "^24.4.2"


[tool.poetry.group.test-bandit.dependencies]
bandit = "^1.7.8"


[tool.poetry.group.test-mypy.dependencies]
mypy = "^1.10.0"


[tool.poetry.group.test-pypi.dependencies]
twine = "^5.1.0"


[tool.poetry.group.test-pip-missing-reqs.dependencies]
pip-check-reqs = "^2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
