[metadata]
name = deepaas
summary = DEEP as a Service (DEEPaaS) is a REST API to expose a 
	machine learning model through a REST API.
description-file =
    README.md
author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es
license = Apache-2
home-page = http://github.com/IFCA/deepaas
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    deepaas
[entry_points]

console_scripts = 
    deepaas-run = deepaas.cmd.run:main
