[metadata]
name = deepaas
summary = DEEPaaS is a REST API to expose a machine learning model.
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author-email = aloga@ifca.unican.es

home-page = https://github.com/indigo-dc/deepaas
project_urls =
    Bug Tracker = https://github.com/indigo-dc/deepaas/issues
    Documentation = https://github.com/indigo-dc/DEEPaaS/blob/master/README.md

license = Apache-2
license_file = LICENSE

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition  Copy classifier
    Topic :: Scientific/Engineering :: Information Analysis  Copy classifier
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[bdist_wheel]
universal = 1

[files]
packages =
    deepaas

[entry_points]
console_scripts = 
    deepaas-run = deepaas.cmd.run:main
