[metadata]
name = deepaas
summary = DEEPaaS is a REST API to expose a machine learning model.
description_file = README.md
description_content_type = text/markdown; charset=UTF-8

author = Alvaro Lopez Garcia
author_email = aloga@ifca.unican.es

home_page = https://github.com/indigo-dc/deepaas
project_urls =
    Bug Tracker = https://github.com/indigo-dc/deepaas/issues
    Documentation = https://deepaas.readthedocs.io/

python_requires = >=3.6

license = Apache-2
license_files = 
    LICENSE

classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: Web Environment
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator

[files]
packages =
    deepaas

[entry_points]
console_scripts =
    deepaas-run = deepaas.cmd.run:main
    deepaas-predict = deepaas.cmd.execute:main
    deepaas-cli = deepaas.cmd.cli:main

oslo.config.opts =
    deepaas = deepaas.opts:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
